--- a/content/themes/ocooking/app/assets/index.html
+++ b/content/themes/ocooking/app/assets/index.html
@@ -16,7 +16,7 @@
             <a class="menu__list__list-item__link" href="#">Au hasard</a>
           </li>
           <li class="menu__list__list-item">
-            <a href="#">Recettes</a>
+            <a class="menu__list__list-item__link" href="#">Recettes</a>
           </li>
         </ul>
       </nav>
@@ -28,7 +28,7 @@
             <a class="menu__list__list-item__link" href="#"><i class="fa fa-facebook"></i></a>
           </li>
           <li class="menu__list__list-item">
-            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a class="menu__list__list-item__link" href="#"><i class="fa fa-twitter"></i></a>
           </li>
         </ul>
       </nav>
@@ -41,10 +41,10 @@
         <h2 class="post__title">Sandwich de saison</h2>
         <span class="post__author">Préparée par Franck Sallswol</span>
       </div>
-      <ul class="informations-list">
-        <li class="informations-list__item"><span class="informations-list__item__name">Préparation</span> 30 min.</li>
-        <li class="informations-list__item"><span class="informations-list__item__name">Cuisson</span> 1h30min.</li>
-        <li class="informations-list__item"><span class="informations-list__item__name">Prix</span> 5€ / pers</li>
+      <ul class="post__informations-list">
+        <li class="post__informations-list__item"><span class="post__informations-list__item__name">Préparation</span> 30 min.</li>
+        <li class="post__informations-list__item"><span class="post__informations-list__item__name">Cuisson</span> 1h30min.</li>
+        <li class="post__informations-list__item"><span class="post__informations-list__item__name">Prix</span> 5€ / pers</li>
       </ul>
       <figure class="post__thumbnail">
         <img src="images/sandwich.jpg" alt="" class="post__thumbnail__image">
@@ -53,12 +53,12 @@
         <h3>La recette en résumé</h3>
         <p class="post__excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, minus odit officia dignissimos ut eligendi.</p>
       </div>
-      <ul class="ingredients">
-        <li class="ingredients__item"><a href="#" class="badget badge-pill badge-dark">Salami</a></li>
-        <li class="ingredients__item"><a href="#" class="badget badge-pill badge-dark">Salade</a></li>
+      <ul class="post__ingredients">
+        <li class="post__ingredients__item"><a href="#" class="badget badge-pill badge-dark">Salami</a></li>
+        <li class="post__ingredients__item"><a href="#" class="badget badge-pill badge-dark">Salade</a></li>
       </ul>
       <div class="post__read-next-container">
-        <a href="#" class="btn btn-outline-ocooking btn--icon-cutlery">Lire la recette</a>
+        <a href="#" class="btn btn-outline-green btn--icon-cutlery">Lire la recette</a>
       </div>
       <div class="post__type-container">
         <span class="post__footer__type-prefix">Recette visible dans</span> <a class="btn btn-outline-dark" href="#">En cas</a>
@@ -83,6 +83,7 @@
       </ul>
     </nav>
     <form action="" class="recipe-proposal">
+      <div class="recipe-proposal__title">Proposer une recette</div>
       <fieldset>
         <div class="form-group">
           <label for="title">Recette</label>
@@ -100,7 +101,7 @@
         </div>
         <div class="form-group">
           <input type="checkbox" name="publish-agreement" id="publish-agreement" />
-          <label for="publish-agreement">Je suis d'accord pour que cette recette soit publiée sur oCooking</label>
+          <label class="d-inline" for="publish-agreement">Je suis d'accord pour que cette recette soit publiée sur oCooking</label>
         </div>
       </fieldset>
       <button type="submit" class="btn btn-green">Proposer</button>
